<?xml version="1.0"?>
<package format="2">
  <name>dynamixel_ros_odens</name>
  <version>2.2.1</version>
  <description>The dynamixel_ros_odens package</description>

  <maintainer email="hm@dream-drive.net">hirokazu onomichi</maintainer>

  <license>Apache 2.0</license>
  <url type="website">https://dream-drive.net</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>yaml-cpp</depend>
  <depend>std_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
